[package]
name = "soul-gateways"
version = "0.1.0"
edition = "2021"
authors = ["AMAI Labs <team@amai.net>"]
description = "Messaging gateway implementations for soul-core agents — Telegram, iMessage, WhatsApp"
license = "MIT"
repository = "https://github.com/AMAI-LABS/soul-gateways"
keywords = ["agent", "gateway", "telegram", "messaging", "ai"]
categories = ["asynchronous", "web-programming"]

[features]
default = ["telegram"]
telegram = []
imessage = ["dep:rusqlite"]
whatsapp = []

[dependencies]
soul-core = { version = "0.11.1", path = "../soul-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"

# iMessage (macOS sqlite access)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
